<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/bt_convertir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:text="@string/button_convertir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txv_resultado"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:text="@string/txv_resultado"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextNumberDecimal"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginBottom="256dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/default_editText"
            android:inputType="numberDecimal"
            android:text="@string/default_editText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="320dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Spinner
                android:id="@+id/spinner_origen"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_destino"
                android:layout_width="150dp"
                android:layout_height="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="370dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_origen"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txv_destino"
                android:textAlignment="center" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>